--- a/InClassAssignment.ipynb
+++ b/InClassAssignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXbkAnmX2UNndCosw9vg4P",
+      "authorship_tag": "ABX9TyMNUjBYJADm7lcYXlKf/okj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,35 +110,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x = 5\n",
-        "if x % 2 == 0:\n",
-        "  res = 'Even'\n",
-        "else:\n",
-        "  res = 'Odd'\n",
-        "print(res)"
-      ],
-      "metadata": {
-        "id": "z1svg2nDAD-_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x = 5\n",
-        "res = 'Even' if x % 2 == 0 else 'Odd'\n",
-        "print(res)"
-      ],
-      "metadata": {
-        "id": "GjVCp7B_AF8J"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -365,24 +336,23 @@
       "metadata": {
         "id": "V88jUgTpN0JH",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 365
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87c192ca-8f3a-4c0e-ce4f-d1659b9f5182"
+        "outputId": "f95cf382-b31d-4bb7-c1dd-82a5e9fd18b2"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-dafc1833635f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Please enter value: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcounts\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please enter value: 1\n",
+            "Please enter value: 2\n",
+            "Please enter value: 3\n",
+            "Please enter value: 4\n",
+            "Please enter value: 5\n",
+            "Please enter value: 3\n",
+            "Please enter value: 4\n"
           ]
         }
       ]
@@ -462,41 +432,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def reverse(s):\n",
-        "  if len(s) <= 1:\n",
-        "    return s\n",
-        "  else:\n",
-        "    return s[-1] + reverse(s[:-1])\n",
-        "reverse('Hello')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "sXbjherce2F1",
-        "outputId": "a33d2f7c-fb13-4876-ad9c-9ddf07ee71de"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'olleH'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def calcFee(hours):\n",
         "  fee = 5 + 2.5 * hours\n",
         "  if fee < 10.0:\n",
@@ -530,51 +465,6 @@
           "text": [
             "Enter number of hours: 5.2\n",
             "Cannot be casted as int()\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def getValues(n):\n",
-        "  L = []\n",
-        "  for i in range(n):\n",
-        "    weight = float(input('Enter weight: '))\n",
-        "    L.append(weight)\n",
-        "  return L\n",
-        "\n",
-        "def calcAverage(alist):\n",
-        "  try:\n",
-        "    print(f'The average weight is {sum(alist[2:]) / len(alist[2:])} lbs.')\n",
-        "  except ZeroDivisionError:\n",
-        "    print('List alist is empty or has a length less than 2')\n",
-        "  except:\n",
-        "    print('Unknown error')\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "  try:\n",
-        "    n = int(input('Enter size of list: '))\n",
-        "    alist = getValues(n)\n",
-        "    calcAverage(alist)\n",
-        "  except ValueError:\n",
-        "    print('Cannot be casted as int()')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l3X99ATljgnN",
-        "outputId": "1ecfb659-e7f3-4c11-de81-d101198cc844"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter size of list: 0\n",
-            "List alist is empty or has a length less than 2\n"
           ]
         }
       ]
@@ -707,57 +597,6 @@
           },
           "metadata": {},
           "execution_count": 16
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Dummy:\n",
-        "  def __init__(self, a):\n",
-        "    self.a = a\n",
-        "\n",
-        "  def __add__(self, other):\n",
-        "    return self.a + other.a\n",
-        "\n",
-        "  def __mul__(self, other):\n",
-        "    return self.a * other.a\n",
-        "\n",
-        "  def __str__(self):\n",
-        "    return str(self.a)\n",
-        "\n",
-        "x = Dummy(3)\n",
-        "y = Dummy(4)"
-      ],
-      "metadata": {
-        "id": "2wgFBHMRRBzg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x + y"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hhGjg2NyRP3k",
-        "outputId": "35af3217-5727-463b-da1a-9ac7b1bcae58"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "7"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
         }
       ]
     },
